<resources>
    <!-- Strings dari MyUts -->
    <string name="app_name">MyNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Praktikum 6.1</string>
    <string name="menu_gallery1">Praktikum 6.2</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="narenda_wicaksono">Agas Indra Kusuma</string>
    <string name="narenda_dicoding_com">Agasindra01@gmail.com</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_map">Maps</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings tambahan dari MyViewAndView -->
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\nFHD AMOLED at 441ppi\n2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches\n143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\nStandby time (LTE): up to 19 days\nTalk time (3g/WCDMA): up to 26 hours\nInternet use time (Wi-Fi): up to 13 hours\nInternet use time (LTE): up to 13 hours\nVideo playback: up to 13 hours\nAudio playback (via headset): up to 110 hours\nFast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="dummy_photos">6 Photos</string>
    <string name="Stock">Stock hanya 5 buah</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="dummy_value">$735</string>
    <string name="stock">Stock</string>
    <string name="specification">Specification</string>
    <string name="my_name">Agas Indra Kusuma</string>
    <string name="buy">Buy</string>


    <string name="heroes_name">Nama Pahlawan</string>
    <string name="description">Deskripsi</string>
    <string-array name="data_name">
        <item>Agas Indra Kusuma</item>
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantara</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
    <string-array name="data_description">
        <item>
            Agas Indra Kusuma adalah mahasiswa politeknik negeri lampung program studi Manajemen Informatika,
            agas kelahiran kotabumi,01 agustus 2004, ia adalah mahasiswa yang penuh dengan semangat dan rasa tanggung jawab
            dan beliau adalah mahasiswa yang baik hati
        </item>
        <item>Salah seorang ulama dan khatib terkemuka di Masjid
Besar Kasultanan Yogyakarta pada masa itu, dan ibu dari K.H. Ahmad
Dahlan adalah puteri dari H. Ibrahim yang juga menjabat penghulu
Kesultanan Ngayogyakarta Hadiningrat pada masa itu. KH. Ahmad
Dahlan telah mempelopori kebangkitan ummat Islam untuk menyadari
nasibnya sebagai bangsa terjajah yang masih harus belajar dan
berbuat. </item>
        <item>Jenderal TNI Anumerta Ahmad Yani (juga dieja Achmad
Yani; lahir di Purworejo, Jawa Tengah, 19 Juni 1922 – meninggal di
Lubang Buaya, Jakarta, 1 Oktober 1965 pada umur 43 tahun) adalah
komandan Tentara Nasional Indonesia Angkatan Darat, dan dibunuh
oleh anggota Gerakan 30 September saat mencoba untuk menculik dia
dari rumahnya.</item>
        <item>Sutomo (lahir di Surabaya, Jawa Timur, 3 Oktober
1920 – meninggal di Padang Arafah, Arab Saudi, 7 Oktober 1981 pada
umur 61 tahun) lebih dikenal dengan sapaan akrab oleh rakyat
sebagai Bung Tomo, adalah pahlawan yang terkenal karena peranannya
dalam membangkitkan semangat rakyat untuk melawan kembalinya
penjajah Belanda melalui tentara NICA, yang berakhir dengan
pertempuran 10 November 1945 yang hingga kini diperingati sebagai
Hari Pahlawan.</item>
        <item>Jenderal TNI (Purn.) Gatot Soebroto (lahir di
Sumpiuh, Banyumas, Jawa Tengah, 10 Oktober 1907 – meninggal di
Jakarta, 11 Juni 1962 pada umur 54 tahun) adalah tokoh perjuangan
militer Indonesia dalam merebut kemerdekaan dan juga pahlawan
nasional Indonesia. Ia dimakamkan di Ungaran, kabupaten
Semarang.</item>
        <item>Raden Mas Soewardi Soerjaningrat (EBI: Suwardi
Suryaningrat, sejak 1922 menjadi Ki Hadjar Dewantara, EBI: Ki
Hajar Dewantara, beberapa menuliskan bunyi bahasa Jawanya dengan
Ki Hajar Dewantoro; lahir di Pakualaman, 2 Mei 1889 – meninggal di
Yogyakarta, 26 April 1959 pada umur 69 tahun; selanjutnya
disingkat sebagai "Soewardi" atau "KHD") adalah aktivis pergerakan
kemerdekaan Indonesia, kolumnis, politisi, dan pelopor pendidikan
bagi kaum pribumi Indonesia dari zaman penjajahan Belanda. Ia
adalah pendiri Perguruan Taman Siswa, suatu lembaga pendidikan
yang memberikan kesempatan bagi para pribumi untuk bisa memperoleh
hak pendidikan seperti halnya para priyayi maupun orang-orang
Belanda.</item>
        <item>Dr.(HC) Drs. H. Mohammad Hatta (lahir dengan nama
Mohammad Athar, dikenal sebagai Bung Hatta; lahir di Fort de Kock
(sekarang Bukittinggi, Sumatera Barat), Hindia Belanda, 12 Agustus
1902 – meninggal di Jakarta, 14 Maret 1980 pada umur 77 tahun)
adalah tokoh pejuang, negarawan, ekonom, dan juga Wakil Presiden
Indonesia yang pertama. Ia bersama Soekarno memainkan peranan
penting untuk memerdekakan bangsa Indonesia dari penjajahan
Belanda sekaligus memproklamirkannya pada 17 Agustus 1945. Ia juga
pernah menjabat sebagai Perdana Menteri dalam Kabinet Hatta I,
Hatta II, dan RIS. Ia mundur dari jabatan wakil presiden pada
tahun 1956, karena berselisih dengan Presiden Soekarno. Hatta juga
dikenal sebagai Bapak Koperasi Indonesia.</item>
        <item>Jenderal Besar Raden Soedirman (EYD: Sudirman; lahir
24 Januari 1916 – meninggal 29 Januari 1950 pada umur 34 tahun)
adalah seorang perwira tinggi Indonesia pada masa Revolusi
Nasional Indonesia. Menjadi panglima besar Tentara Nasional
Indonesia pertama, ia secara luas terus dihormati di Indonesia.
Terlahir dari pasangan rakyat biasa di Purbalingga, Hindia
Belanda, Soedirman diadopsi oleh pamannya yang seorang priyayi.
Setelah keluarganya pindah ke Cilacap pada tahun 1916, Soedirman
            tumbuh menjadi seorang siswa rajin; ia sangat aktif dalam kegiatan
ekstrakurikuler, termasuk mengikuti program kepanduan yang
dijalankan oleh organisasi Islam Muhammadiyah. Saat di sekolah
menengah, Soedirman mulai menunjukkan kemampuannya dalam memimpin
dan berorganisasi, dan dihormati oleh masyarakat karena
ketaatannya pada Islam. Setelah berhenti kuliah keguruan, pada
1936 ia mulai bekerja sebagai seorang guru, dan kemudian menjadi
kepala sekolah, di sekolah dasar Muhammadiyah; ia juga aktif dalam
kegiatan Muhammadiyah lainnya dan menjadi pemimpin Kelompok Pemuda
Muhammadiyah pada tahun 1937. Setelah Jepang menduduki Hindia
Belanda pada 1942, Soedirman tetap mengajar. Pada tahun 1944, ia
bergabung dengan tentara Pembela Tanah Air (PETA) yang disponsori
Jepang, menjabat sebagai komandan batalion di Banyumas. Selama
menjabat, Soedirman bersama rekannya sesama prajurit melakukan
pemberontakan, namun kemudian diasingkan ke Bogor.</item>
        <item>Dr.(H.C.) Ir. H. Soekarno (ER, EYD: Sukarno, nama
lahir: Koesno Sosrodihardjo) (lahir di Surabaya, Jawa Timur, 6
Juni 1901 – meninggal di Jakarta, 21 Juni 1970 pada umur 69 tahun)
adalah Presiden pertama Republik Indonesia yang menjabat pada
periode 1945–1967. Ia memainkan peranan penting dalam memerdekakan
bangsa Indonesia dari penjajahan Belanda. Ia adalah Proklamator
Kemerdekaan Indonesia (bersama dengan Mohammad Hatta) yang terjadi
pada tanggal 17 Agustus 1945. Soekarno adalah yang pertama kali
mencetuskan konsep mengenai Pancasila sebagai dasar negara
Indonesia dan ia sendiri yang menamainya.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di
Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12
September 1958 pada umur 55 tahun) adalah seorang pahlawan
nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang
Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/agas2</item>
        <item>@drawable/ahmad_dahlan</item>
        <item>@drawable/ahmad_yani</item>
        <item>@drawable/bung_tomo</item>
        <item>@drawable/gatot_subroto</item>
        <item>@drawable/ki_hadjar_dewantara</item>
        <item>@drawable/mohammad_hatta</item>
        <item>@drawable/sudirman</item>
        <item>@drawable/sukarno</item>
        <item>@drawable/supomo</item>
    </integer-array>


    ----Praktikum 3 4

    <string name="move_activity">Pindah Activity</string>
    <string name="this_is_moveactivity">Nama : Agas Indra Kusuma Npm : 22753040</string>
    <string name="move_with_data">move_with_data</string>
    <string name="data_received">Data Received</string>
    <string name="pindah_activity_dengan_data">PINDAH ACTIVITY DENGAN DATA</string>
    <string name="pindah_activity">PINDAH ACTIVITY</string>
    <string name="dial_number">TELEPON </string>
    <string name="choose_number">pilih Nomor</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="move_for_result">PINDAH UNTUK HASIL</string>
    <string name="result_from_activity">hasil dari aktivitas</string>
    <string name="pilih">pilih</string>


    -----Praktikum 2


        <string name="panjang">Panjang</string>
        <string name="lebar">Lebar</string>
        <string name="tinggi">Tinggi</string>
        <string name="hitung">Hitung</string>
        <string name="hasil">Hasil</string>
    </resources>


