<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myuts.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myuts.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_gallery1"
        android:name="com.example.myuts.ui.gallery.praktikum6_2"
        android:label="@string/menu_gallery1"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_gallery2"
        android:name="com.example.myuts.ui.gallery.Praktikum5"
        android:label="Praktikum 5"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_gallery3"
        android:name="com.example.myuts.ui.gallery.Praktikum3_4"
        android:label="Praktikum 5"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_gallery4"
        android:name="com.example.myuts.ui.gallery.Praktikum2"
        android:label="Praktikum 2"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myuts.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.myuts.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <activity
        android:id="@+id/nav_subway"
        android:name="com.example.myuts.SubwayActivity"
        android:label="@string/menu_subway"
        tools:layout="@layout/activity_subway" />

</navigation>