<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item

            android:id="@+id/nav_gallery1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery1" />
        <item

            android:id="@+id/nav_gallery2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Praktikum 5" />
        <item
            android:id="@+id/nav_gallery3"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Praktikum3_4" />
        <item

            android:id="@+id/nav_gallery4"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Praktikum 2" />
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
<!--        <item-->
<!--            android:id="@+id/nav_cart"-->
<!--            android:icon="@drawable/ic_shopping_cart"-->
<!--            android:title="@string/menu_cart" />-->
    </group>
    <item android:title="@string/menu_map">
        <menu>
<!--            <item-->
<!--                android:id="@+id/nav_map"-->
<!--                android:icon="@drawable/ic_map"-->
<!--                android:title="@string/menu_map" />-->
<!--            <item-->
<!--                android:id="@+id/nav_hotel"-->
<!--                android:icon="@drawable/ic_hotel"-->
<!--                android:title="@string/menu_hotel" />-->
<!--            <item-->
<!--                android:id="@+id/nav_subway"-->
<!--                android:icon="@drawable/ic_subway"-->
<!--                android:title="@string/menu_subway" />-->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="Logout"/>
        </menu>
    </item>
</menu>